# matterq

./: CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: frontmatter-subset.md  query-language.md
examples/: README.md  api_tour.py
examples/vault/: inbox.md
examples/vault/journal/: 2026-07-01.md
examples/vault/projects/: api-migration.md  old-blog.md  website-redesign.md
examples/vault/reading/: designing-data.md  pragmatic-thinking.md
scripts/: smoke.sh
src/matterq/: __init__.py  __main__.py  cli.py  engine.py  frontmatter.py  inventory.py  output.py  query.py  scanner.py
tests/: conftest.py  test_cli.py  test_engine_eval.py  test_frontmatter_collections.py  test_frontmatter_documents.py  test_frontmatter_scalars.py  test_output.py  test_query_parse.py  test_scanner.py  test_sort_limit.py
